--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -133,7 +133,12 @@ obj-$(CONFIG_INTELLIGENCE) += intelligence.o
 $(obj)/configs.o: $(obj)/config_data.h
 
 targets += config_data.gz
-$(obj)/config_data.gz: $(KCONFIG_CONFIG) FORCE
+ifeq ($(CONFIG_SEC_GTS7XL_PROJECT),y)
+  defconfig := arch/arm64/configs/vendor/gts7xl_eur_open_stock_defconfig
+else
+  defconfig := $(KCONFIG_CONFIG)
+endif
+$(obj)/config_data.gz: $(defconfig) FORCE
 	$(call if_changed,gzip)
 
       filechk_ikconfiggz = (echo "static const char kernel_config_data[] __used = MAGIC_START"; cat $< | scripts/bin2c; echo "MAGIC_END;")
