.gitignore: updated .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,14 @@
+
+.DS_Store
+*.orig
+
+*.hdrtest
+*.ko
+
 out/
-.wireguard-fetch-lock
+
 .vscode*
+
+scripts/crypto/__pycache__/*.pyc
+security/samsung/defex_lsm/pack_rules
+security/samsung/defex_lsm/defex_packed_rules.inc
