f2fs: Add support for reporting a fake kernel version to fsck
fsck.f2fs forces a filesystem fix on boot if it detects that the current
kernel version differs from the one saved in the superblock, which results in
fsck blocking boot for a long time (~35 seconds). This commit provides a
way to report a constant fake kernel version to fsck to avoid triggering
the version check, which is useful if you boot new kernel builds
frequently.

--- a/fs/f2fs/Kconfig
+++ b/fs/f2fs/Kconfig
@@ -1,3 +1,4 @@
+# SPDX-License-Identifier: GPL-2.0-only
 config F2FS_FS
 	tristate "F2FS filesystem support"
 	depends on BLOCK
@@ -81,19 +82,10 @@ config F2FS_STRICT_BUG_ON
 	depends on F2FS_FS
 	default y
 	help
-	  Use BUG_ON() instead of WARN_ON(), when there is an error 
+	  Use BUG_ON() instead of WARN_ON(), when there is an error
 	  in the filesystem consistency.
 
 	  Default Y.
-
-config F2FS_FS_ENCRYPTION
-	bool "F2FS Encryption"
-	depends on F2FS_FS
-	select FS_ENCRYPTION
-	help
-	  This kconfig symbol is deprecated; now it just selects
-	  FS_ENCRYPTION.  Use CONFIG_FS_ENCRYPTION=y in new config
-	  files.
 
 config F2FS_IO_TRACE
 	bool "F2FS IO tracer"
@@ -138,6 +130,25 @@ config F2FS_FS_LZ4
 	help
 	  Support LZ4 compress algorithm, if unsure, say Y.
 
+config F2FS_FS_ZSTD
+	bool "ZSTD compression support"
+	depends on F2FS_FS_COMPRESSION
+	select ZSTD_COMPRESS
+	select ZSTD_DECOMPRESS
+	default y
+	help
+	  Support ZSTD compress algorithm, if unsure, say Y.
+
+config F2FS_FS_LZORLE
+	bool "LZO-RLE compression support"
+	depends on F2FS_FS_COMPRESSION
+	depends on F2FS_FS_LZO
+	select LZO_COMPRESS
+	select LZO_DECOMPRESS
+	default y
+	help
+	  Support LZO-RLE compress algorithm, if unsure, say Y.
+
 config F2FS_SEC_DEBUG_NODE
 	bool "SEC DEBUG NODE"
 	depends on F2FS_FS && DEBUG_FS
@@ -155,3 +166,39 @@ config F2FS_SEC_BLOCK_OPERATIONS_DEBUG
 	  Collect block_operations() log for debugging
 
 	  If unsure, say N.
+
+config F2FS_SEC_ENC_STRICT_MODE
+	bool "SEC casefold encoding strict mode"
+	depends on F2FS_FS
+	depends on UNICODE
+	default y
+	help
+	  Avoid generating invalid hash for CI directory entries
+
+config F2FS_SUPPORT_STLOG
+	bool "Enable storage log"
+	depends on F2FS_FS 
+	depends on PROC_STLOG
+	default y
+	help
+	  Support STLOG
+
+config F2FS_REPORT_FAKE_KERNEL_VERSION
+	bool "Report fake kernel version to fsck.f2fs"
+	depends on F2FS_FS
+	help
+	  fsck.f2fs forces a filesystem fix on boot if it detects that the current
+	  kernel version differs from the one saved in the superblock, which results in
+	  fsck taking a long time to run. This option provides a way to report a
+	  constant fake kernel version to fsck to avoid triggering the version check.
+
+	  If unsure, say N.
+
+config F2FS_FAKE_KERNEL_RELEASE
+	string "Kernel release for fsck.f2fs"
+	depends on F2FS_REPORT_FAKE_KERNEL_VERSION
+
+config F2FS_FAKE_KERNEL_VERSION
+	string "Kernel version for fsck.f2fs"
+	depends on F2FS_REPORT_FAKE_KERNEL_VERSION
+
