--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "release"]
 	path = release
-	url = https://github.com/b1ad3runn3r/AnyKernel3
+	url = git@github.com:b1ad3runn3r/AnyKernel3.git
