--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,11 @@
 	path = release
 	url = https://github.com/b1ad3runn3r/AnyKernel3.git
 	branch = master
+[submodule "toolchain/clang"]
+	path = toolchain/clang
+	url = https://github.com/kdrag0n/proton-clang
+	shallow = true
+[submodule "toolchain/gcc"]
+	path = toolchain/gcc
+	url = https://github.com/LineageOS/android_prebuilts_gcc_linux-x86_aarch64_aarch64-linux-android-4.9
+	shallow = true
