net: introduce wireguard support
now the script fetches stuff automatically. I don't know why I added this script, then deleted, then added again now (maybe cuz I am profoundly retarded).

Moreover, edited README.md

--- a/.gitignore
+++ b/.gitignore
@@ -168,3 +168,4 @@ scripts/crypto/__pycache__/*.pyc
 security/samsung/defex_lsm/pack_rules
 security/samsung/defex_lsm/defex_packed_rules.inc
 PATCH/
+.wireguard-fetch-lock
