input: AOSP palm rejection driver
AOSP lacks a useful feature of palm rejection when using S-Pen. OneUI has it.

During testing it was found out that kernel driver conflicts with a system one, so it is declared under #ifdef statement

--- a/drivers/input/touchscreen/stm/fts1ba90a/Kconfig
+++ b/drivers/input/touchscreen/stm/fts1ba90a/Kconfig
@@ -10,3 +10,10 @@ config TOUCHSCREEN_FTS1BA90A
 		If unsure, say N.
 		To compile this driver as a module, choose M here: the
 		module will be called STM_ts.
+
+config AOSP_PALM_REJECTION
+	bool "AOSP palm rejection driver"
+	help
+		Say Y here to enable palm rejection on AOSP.
+		If you are on OneUI, say no.
+		Otherwise, choose N.
